@@ -1,3 +1,4 @@
+- Implement unit test for all the statistics utility functions.
 
 - Implement advanced slicing a la numpy.
 
