@@ -9,7 +9,6 @@
  * (See LICENSE file).
  *
  */
-#include <cmath>
 #include <sstream>
 #include <vector>
 
@@ -18,35 +17,24 @@
 #include <boost/python.hpp>
 
 #include <boost/numpy/ndarray.hpp>
+#include <boost/numpy/iterators/flat_iterator.hpp>
 #include <boost/numpy/iterators/multi_flat_iterator.hpp>
 #include <boost/numpy/python/make_tuple_from_container.hpp>
 
 #include <ndhist/detail/bin_iter_value_type_traits.hpp>
 #include <ndhist/type_support.hpp>
 #include <ndhist/detail/utils.hpp>
-#include <ndhist/stats/mean.hpp>
-
-namespace bp = boost::python;
-namespace bn = boost::numpy;
+#include <ndhist/stats/median.hpp>
 
 namespace ndhist {
 namespace stats {
 
 namespace detail {
 
-/**
- * Calculates the n'th moment value along the given axis of the given ndhist
- * object weighted by the sum of weights in each bin.
- * It generates a projection along the given axis and then calculates the n'th
- * moment value.
- * In statistics the n'th moment is defined as the expectation of x^n, i.e.
- * ``E[x^n]``, where x is the bin center axis value.
- */
 template <typename AxisValueType, typename WeightValueType>
 AxisValueType
-calc_axis_moment_impl(
+calc_axis_median_impl(
     ndhist const & h
-  , intptr_t const n
   , intptr_t const axis
 )
 {
@@ -59,42 +47,85 @@ calc_axis_moment_impl(
     intptr_t nbins = theaxis.get_n_bins();
     if(theaxis.has_underflow_bin()) --nbins;
     if(theaxis.has_overflow_bin()) --nbins;
-    bn::ndarray proj_bincenters_arr = theaxis.get_bincenters_ndarray();
     bn::ndarray proj_bc_arr = proj.bc_.construct_ndarray(proj.bc_.get_dtype(), 0, /*owner=*/NULL, /*set_owndata_flag=*/false);
-    typedef bn::iterators::multi_flat_iterator<2>::impl<
+
+    // First calculate the median sum of weights sum.
+    typedef bn::iterators::flat_iterator<
+                ::ndhist::detail::bin_iter_value_type_traits<WeightValueType>
+            >
+            bin_iter_t;
+    bin_iter_t bin_iter(
+        proj_bc_arr
+      , bn::detail::iter_operand::flags::READONLY::value
+    );
+    // Skip the underflow bin.
+    if(theaxis.has_underflow_bin()) ++bin_iter;
+    bool all_bins_are_zero = true;
+    double median_sow_sum = 0;
+    for(intptr_t i=0; i<nbins; ++i)
+    {
+        typename bin_iter_t::value_ref_type bin = *bin_iter;
+        median_sow_sum += *bin.sow_;
+        if(median_sow_sum != 0)
+        {
+            all_bins_are_zero = false;
+        }
+        ++bin_iter;
+    }
+    median_sow_sum *= 0.5;
+    if(all_bins_are_zero)
+    {
+        std::stringstream ss;
+        ss << "All bin content values are zero. The median value is ambiguous "
+           << "in that case!";
+        throw ValueError(ss.str());
+    }
+
+    // At least one bin content value is unequal than zero, search for the
+    // median axis value.
+    typedef bn::iterators::multi_flat_iterator<3>::impl<
                 bn::iterators::single_value<AxisValueType>
+              , bn::iterators::single_value<AxisValueType>
               , ::ndhist::detail::bin_iter_value_type_traits<WeightValueType>
             >
             multi_iter_t;
+    bn::ndarray axis_bincenters_arr = theaxis.get_bincenters_ndarray();
+    bn::ndarray axis_upper_binedges_arr = theaxis.get_upper_binedges_ndarray();
     multi_iter_t iter(
-        proj_bincenters_arr
+        axis_bincenters_arr
+      , axis_upper_binedges_arr
       , proj_bc_arr
       , bn::detail::iter_operand::flags::READONLY::value
       , bn::detail::iter_operand::flags::READONLY::value
+      , bn::detail::iter_operand::flags::READONLY::value
     );
-
     // Skip the underflow bin.
     if(theaxis.has_underflow_bin()) ++iter;
-
-    AxisValueType moment = 0;
-    WeightValueType sow_sum = 0;
-    while(nbins > 0)
+    WeightValueType curr_sow_sum = 0;
+    for(intptr_t i=0; i<nbins; ++i)
     {
         typename multi_iter_t::multi_references_type multi_value = *iter;
-        typename multi_iter_t::value_ref_type_0 axis_bincenter_value = multi_value.value_0;
-        typename multi_iter_t::value_ref_type_1 bin                  = multi_value.value_1;
+        typename multi_iter_t::value_ref_type_0 axis_bincenter_value     = multi_value.value_0;
+        typename multi_iter_t::value_ref_type_1 axis_upper_binedge_value = multi_value.value_1;
+        typename multi_iter_t::value_ref_type_2 bin                      = multi_value.value_2;
 
-        sow_sum += *bin.sow_;
-        moment += *bin.sow_ * (n == 1 ? axis_bincenter_value
-                            : (n == 2 ? axis_bincenter_value*axis_bincenter_value
-                            : (n == 3 ? axis_bincenter_value*axis_bincenter_value*axis_bincenter_value
-                            : std::pow(axis_bincenter_value, n))));
+        curr_sow_sum += *bin.sow_;
+        if(curr_sow_sum == median_sow_sum)
+        {
+            return axis_upper_binedge_value;
+        }
+        else if(curr_sow_sum > median_sow_sum)
+        {
+            return axis_bincenter_value;
+        }
 
         ++iter;
-        --nbins;
     }
-    moment /= sow_sum;
-    return moment;
+
+    std::stringstream ss;
+    ss << "The median value for axis '"<<axis<<"' could not be determined. "
+       << "This is a BUG!";
+    throw RuntimeError(ss.str());
 }
 
 }// namespace detail
@@ -104,9 +135,8 @@ namespace py {
 namespace detail {
 
 bp::object
-calc_axis_moment(
+calc_axis_median(
     ndhist const & h
-  , intptr_t const n
   , intptr_t const axis
 )
 {
@@ -120,7 +150,7 @@ calc_axis_moment(
     {
         std::stringstream ss;
         ss << "The axis and weight data types must be POD types. Non-POD types "
-           << "are not supported by the moment function!";
+           << "are not supported by the median function!";
         throw TypeError(ss.str());
     }
 
@@ -129,52 +159,51 @@ calc_axis_moment(
            && bn::dtype::equivalent(h.get_weight_dtype(), bn::dtype::get_builtin<BOOST_PP_SEQ_ELEM(1,seq)>())\
           )                                                                     \
         {                                                                       \
-            BOOST_PP_SEQ_ELEM(0,seq) moment = ::ndhist::stats::detail::calc_axis_moment_impl<BOOST_PP_SEQ_ELEM(0,seq), BOOST_PP_SEQ_ELEM(1,seq)>(h, n, axis_idx);\
-            return bp::object(moment);                                          \
+            BOOST_PP_SEQ_ELEM(0,seq) median = ::ndhist::stats::detail::calc_axis_median_impl<BOOST_PP_SEQ_ELEM(0,seq), BOOST_PP_SEQ_ELEM(1,seq)>(h, axis_idx);\
+            return bp::object(median);                                          \
         }
     BOOST_PP_SEQ_FOR_EACH_PRODUCT(NDHIST_MULTPLEX, (NDHIST_TYPE_SUPPORT_AXIS_VALUE_TYPES_WITHOUT_OBJECT)(NDHIST_TYPE_SUPPORT_WEIGHT_VALUE_TYPES_WITHOUT_OBJECT))
     #undef NDHIST_MULTPLEX
 
     std::stringstream ss;
     ss << "The combination of axis value type and weight value type of this "
-       << "ndhist object is not supported for the moment function!";
+       << "ndhist object is not supported for the median function!";
     throw TypeError(ss.str());
 }
 
 }// namespace detail
 
 bp::object
-moment(
+median(
     ndhist const & h
-  , intptr_t const n
   , bp::object const & axis
 )
 {
     if(axis != bp::object())
     {
-        // A particular axis is given. So calculate the moment only for that
+        // A particular axis is given. So calculate the median only for that
         // axis and return a scalar.
         intptr_t const axis_idx = bp::extract<intptr_t>(axis);
-        return detail::calc_axis_moment(h, n, axis_idx);
+        return detail::calc_axis_median(h, axis_idx);
     }
 
-    // No axis was specified, so calculate the moment for all axes.
+    // No axis was specified, so calculate the median for all axes.
     intptr_t const nd = h.get_nd();
 
     // Return a scalar value if the dimensionality of the histogram is 1.
     if(nd == 1)
     {
-        return detail::calc_axis_moment(h, n, 0);
+        return detail::calc_axis_median(h, 0);
     }
 
     // Return a tuple holding the moment values for each single axis.
-    std::vector<bp::object> moments;
-    moments.reserve(nd);
+    std::vector<bp::object> medians;
+    medians.reserve(nd);
     for(intptr_t i=0; i<nd; ++i)
     {
-        moments.push_back(detail::calc_axis_moment(h, n, i));
+        medians.push_back(detail::calc_axis_median(h, i));
     }
-    return boost::python::make_tuple_from_container(moments.begin(), moments.end());
+    return boost::python::make_tuple_from_container(medians.begin(), medians.end());
 }
 
 }// namespace py
